src/components/Widgets/NavigationRail/NavigationRail.css
.NavigationRail {
    width: 80px;
}

.NavigationRail > .inner {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 40px;

    position: relative;
    width: inherit;
    height: inherit;
    padding: 44px 0 56px 0;
}

.NavigationRail > .inner > .menu {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: inherit;
    gap: 4px;
}

.NavigationRail > .inner > .items {
    display: flex;
    width: inherit;
    flex-direction: column;
    align-items: flex-start;
    gap: 4px;
    flex: 1;
}

.NavigationRail--start > .inner > .items {
    justify-content: start;
}

.NavigationRail--center > .inner > .items {
    justify-content: center;
}

.NavigationRail--end > .inner > .items {
    justify-content: end;
}


/**
 * Item
 */

.NavigationRailItem {
    position: relative;
    height: 56px;
    width: inherit;
    cursor: pointer;

    gap: 4px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    align-self: stretch;
    color: var(--znui-on-surface-variant);
    max-height: 80px;
}

.NavigationRailItem > .IconContainer > .background-state {
    position: absolute;
    top: 0;
    bottom: 0;
    right: 50%;
    left: 50%;
    opacity: 0;

    border-radius: 16px;
    background: var(--znui-secondary-container);
    transition: left 200ms var(--emphasized-motion), right 200ms var(--emphasized-motion), opacity 200ms var(--emphasized-motion);
}

.NavigationRailItem > .IconContainer {
    position: relative;
    padding: 4px 16px;
    border-radius: 16px;
    overflow: clip;
    user-select: none;
}

.NavigationRailItem > .IconContainer > .IconWrapper {
    --icon-size: 24px;
    position: relative;
    z-index: 1;

    color: currentColor;
    transition: color 200ms var(--emphasized-motion);
}

.NavigationRailItem > .title {
    user-select: none;
    cursor: pointer;
    color: var(--znui-on-surface-variant);
    transition: color 200ms var(--emphasized-motion);
    max-width: 85%;
    text-overflow: ellipsis;
}

.NavigationRailItem > .title {
    opacity: 0;
    color: var(--znui-on-surface);
    transition: opacity 200ms var(--emphasized-motion);
}

.NavigationRailItem--selected > .IconContainer > .icon {
    color: var(--znui-on-secondary-container);
}

.NavigationRailItem--selected > .title {
    opacity: 1;
    transition: opacity 200ms var(--emphasized-decelerate-motion);
}

.NavigationRailItem--selected > .IconContainer > .background-state {
    right: 0;
    left: 0;
    opacity: 1;
}

